# Sandbox2

./: .gitignore  AABB.h  BNode.h  Bounds.h  CMakeLists.txt  IMeshBuilder.h  IMeshBuildingPolicy.h  IProximityQueries.h  IShape.h  IntersectionResult.h  IsPropertyModifiable.h  Mesh.cpp  Mesh.h  NodeData.h  Point.h  Polygon.h  README.md  Shape.h  TriMeshDistBrutForce.cpp  TriMeshDistBrutForce.h  TriMeshProxQueryV1.cpp  TriMeshProxQueryV1.h  TriMeshProxQueryV2.cpp  TriMeshProxQueryV3.cpp  TriMeshProxQueryV3.h  TriMeshQueryV1.cpp  TriMeshQueryV1.h  TriMeshQueryV2.cpp  TriMeshQueryV2.h  TriMeshQueryV3.cpp  TriMeshQueryV3.h  Triangle.cpp  Triangle.h  TriangleV2.cpp  TriangleV2.h  TriangularMeshBuildingPolicy.cpp  TriangularMeshBuildingPolicy.h  TriangularMeshDistBruteForce.h  Vec3.h  main.cpp  (+1 more)
doc/: notes
examples/: CMakeLists.txt  MeshBuilderEx.cpp  ProxQueryEx.cpp  ShapeEx.cpp
html/: AABB_8h_source.html  BNode_8h_source.html  Bounds_8h_source.html  IMeshBuildingPolicy_8h_source.html  IProximityQueries_8h_source.html  IntersectionResult_8h_source.html  Mesh_8h_source.html  NodeData_8h_source.html  Polygon_8h_source.html  TriMeshProxQueryV1_8h_source.html  TriMeshProxQueryV2_8h_source.html  TriMeshQueryV1_8h_source.html  TriMeshQueryV2_8h_source.html  Triangle_8h_source.html  TriangularMeshBuildingPolicy_8h_source.html  Vec3_8h_source.html  annotated.html  classCustomShapeMeshBuildingPolicy-members.html  classCustomShapeMeshBuildingPolicy.html  classes.html  classrabbit_1_1AABB-members.html  classrabbit_1_1AABB.html  classrabbit_1_1BNode-members.html  classrabbit_1_1BNode.html  classrabbit_1_1IMeshBuildingPolicy-members.html  classrabbit_1_1IMeshBuildingPolicy.html  classrabbit_1_1IProximityQueries-members.html  classrabbit_1_1IProximityQueries.html  classrabbit_1_1Mesh-members.html  classrabbit_1_1Mesh.html  classrabbit_1_1Polygon-members.html  classrabbit_1_1Polygon.html  classrabbit_1_1TriMeshProxQueryV1-members.html  classrabbit_1_1TriMeshProxQueryV1.html  classrabbit_1_1TriMeshProxQueryV2-members.html  classrabbit_1_1TriMeshProxQueryV2.html  classrabbit_1_1Triangle-members.html  classrabbit_1_1Triangle.html  classrabbit_1_1TriangularMeshBuilingPolicy-members.html  classrabbit_1_1TriangularMeshBuilingPolicy.html  (+22 more)
html/search/: all_0.js  all_2.js  all_4.js  all_5.js  all_7.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  search.js  variables_0.js  variables_1.js
tests/: CMakeLists.txt  test_aabb.cpp  test_dist_brute_force.cpp  test_mesh.cpp  test_tri_mesh_query_v1.cpp  test_tri_mesh_query_v2.cpp  test_triangle.cpp  test_vec3.cpp
